--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ avatar: assets/img/myw.png                         # Empty for no avatar in navb
 favicon: assets/favicon.ico                             # Icon displayed in the tab
 
 # Header and footer text
-header_text: Watch me grow - grow with me?  # Change Blog header text
+header_text: Watch me grow - Grow with me  # Change Blog header text
 header_feature_image: assets/img/pexels/triangular.jpeg
 footer_text: >
   Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
